--- a/app/src/main/res/menu/update_fragment_menu.xml
+++ b/app/src/main/res/menu/update_fragment_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/save_menu"
         android:title="@string/save"
-        android:icon="@drawable/ic_save"
+        android:icon="@drawable/done"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/delete_menu"
